@@ -25,4 +25,5 @@
 - add some of the other non-useless stuff reformail can do, if any
 - write/append/pipe would benefit from add-from per stdout
 - -D should override macros in file
-- add-header and a line count for pop3/imap (%[lines])
+- document server_uid
+- document add-header, lines/body_lines/header_lines
