@@ -1,5 +1,7 @@
 03 March 2007
 
+* add-header action and lines, body_lines, header_lines tags for IMAP/POP3,
+  suggested by Frank Terbeck.
 * Linux dirname(3)/basename(3) screws up the buffer. Fixed it thanks to Frank
   Terbeck.
 * Fixed bugs in string parsing thanks to Frank Terbeck.
@@ -79,4 +81,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.22 2007-03-04 00:34:14 nicm Exp $
+$Id: CHANGES,v 1.23 2007-03-04 16:01:30 nicm Exp $
